[package]
name = "euler-lib"
version = "0.1.0"
authors = ["TAKEDA-Takashi <takeda.takashi0308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
num = { version = "0.3.0", features = ["rand"] }
itertools = "0.9.0"
