[package]
name = "project-euler"
version = "0.1.0"
authors = ["TAKEDA-Takashi <takeda.takashi0308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
num = "0.3.0"
lazy_static = "1.4.0"
eval = "0.4.3"
regex = "1.4.1"
euler-lib = { path = "../euler-lib" }
