[package]
name = "project-euler"
version = "0.1.0"
authors = ["TAKEDA-Takashi <takeda.takashi0308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
num = "0.3.0"
once_cell = "1.5.2"
eval = "0.4.3"
regex = "1.4.1"
cached = "0.20.0"
euler-lib = { path = "../euler-lib" }
